--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,9 @@ body{
   font-family: Arial, Helvetica, sans-serif, cursive;
   line-height:1.5em;
   padding-top:50px;
-  background-color: rgb(197, 124, 181);
-  background-attachment: fixed;
+  background-color: pink;
   height:100%;
   background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   color:#fff;
 
 }
